--- a/package.json
+++ b/package.json
@@ -3,12 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/free-regular-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.1.18",
+    "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^4.19.5",
+    "autoprefixer": "^10.4.4",
+    "axios": "^0.26.1",
+    "firebase": "^9.6.10",
+    "node-sass": "^7.0.1",
+    "postcss": "^8.4.12",
+    "random-number": "0.0.9",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-player": "^2.10.0",
     "react-scripts": "5.0.0",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.4.1",
+    "tailwindcss": "^3.0.23",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
